--- a/app/src/main/res/color/bottom_nav_color.xml
+++ b/app/src/main/res/color/bottom_nav_color.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:color="@color/white" android:state_checkable="true"/>
-    <item android:color="@color/bck_ground" android:state_checkable="false"/>
+    <item android:color="@color/white" android:state_checked="true" />
+    <item android:color="@color/bck_ground" android:state_checked="false" />
 
 </selector>
