--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -43,4 +43,9 @@
         <item name="android:statusBarColor">@color/bck_ground</item>
         <item name="android:windowTranslucentNavigation">false</item>
     </style>
+
+    <style name="ToolbarTheme" parent="@style/ThemeOverlay.AppCompat.ActionBar">
+        <!-- Customize color of navigation drawer icon and back arrow -->
+        <item name="colorControlNormal">@color/bck_ground</item>
+    </style>
 </resources>
