--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -202,7 +202,7 @@
                                 android:layout_marginBottom="@dimen/_8sdp"
                                 android:visibility="gone" />
 
-                            <androidx.recyclerview.widget.RecyclerView
+                            <!--<androidx.recyclerview.widget.RecyclerView
                                 android:id="@+id/rcv_before"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
@@ -218,7 +218,7 @@
                                 android:layout_marginHorizontal="@dimen/_8sdp"
                                 android:layout_marginTop="@dimen/_2sdp"
                                 android:layout_marginBottom="@dimen/_8sdp"
-                                android:visibility="gone" />
+                                android:visibility="gone" />-->
 
 
                         </LinearLayout>
