--- a/app/src/main/res/layout/fragment_planner.xml
+++ b/app/src/main/res/layout/fragment_planner.xml
@@ -87,9 +87,9 @@
                             app:layout_constraintTop_toTopOf="parent">
 
                             <TextView
+                                android:id="@+id/tv_longest_steak"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="0"
                                 android:textColor="@color/white"
                                 android:textSize="@dimen/_20ssp"
                                 android:textStyle="bold" />
