Complete basic project without sync from server to local app and running with docker

--- a/app/src/main/res/layout/fragment_planner.xml
+++ b/app/src/main/res/layout/fragment_planner.xml
@@ -114,8 +114,7 @@
                     layout="@layout/layout_ver_calendar"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/_20sdp"
-                    android:layout_marginBottom="@dimen/_20sdp"/>
+                    android:layout_marginTop="@dimen/_20sdp"/>
 
 
                 <TextView
@@ -142,7 +141,6 @@
                     android:layout_height="@dimen/_20sdp"
                     android:layout_marginStart="@dimen/_15sdp"
                     android:layout_marginEnd="@dimen/_15sdp"
-                    android:layout_marginTop="@dimen/_10sdp"
                     android:text="Your record"
                     android:textSize="@dimen/_12ssp"
                     android:textStyle="bold"
