--- a/app/src/main/res/layout/layout_remainder_dialog.xml
+++ b/app/src/main/res/layout/layout_remainder_dialog.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
@@ -27,7 +28,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textStyle="bold"
-                android:text="Remainder"
+                android:text="@string/str_remainder_title"
                 android:textSize="@dimen/_15ssp"
                 android:textColor="@color/white"
                 android:gravity="center" />
@@ -51,7 +52,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_10sdp"
-                android:src="@drawable/ic_remainder"/>
+                android:src="@drawable/ic_remainder"
+                tools:ignore="ContentDescription" />
 
             <LinearLayout
                 android:layout_width="@dimen/_185sdp"
@@ -68,22 +70,27 @@
                     android:layout_width="0dp"
                     android:layout_height="@dimen/_100sdp"
                     android:layout_weight="1"
+                    android:descendantFocusability="blocksDescendants"
                     android:selectionDividerHeight="0dp"
-                    android:theme="@style/TimePickerDialog" />
+                    android:theme="@style/TimePickerDialog"
+                    tools:ignore="UnusedAttribute" />
 
                 <ImageView
                     android:layout_width="@dimen/_3sdp"
                     android:layout_height="@dimen/_20sdp"
                     android:layout_gravity="center"
-                    android:src="@drawable/bck_time_picker_line" />
+                    android:src="@drawable/bck_time_picker_line"
+                    tools:ignore="ContentDescription" />
 
                 <NumberPicker
                     android:id="@+id/m_num_picker"
                     android:layout_width="0dp"
                     android:layout_height="@dimen/_100sdp"
                     android:layout_weight="1"
+                    android:descendantFocusability="blocksDescendants"
                     android:selectionDividerHeight="0dp"
-                    android:theme="@style/TimePickerDialog" />
+                    android:theme="@style/TimePickerDialog"
+                    tools:ignore="UnusedAttribute" />
 
 
             </LinearLayout>
@@ -100,11 +107,12 @@
                     android:layout_height="@dimen/_50sdp"
                     android:layout_weight="1"
                     android:background="@drawable/bck_remainder_cancel_btn"
-                    android:text="Cancel"
+                    android:text="@string/str_cancel"
                     android:textStyle="bold"
                     android:textSize="@dimen/_13sdp"
                     android:textColor="@color/white"
-                    android:textAllCaps="false"/>
+                    android:textAllCaps="false"
+                    tools:ignore="ButtonStyle" />
 
                 <Button
                     android:id="@+id/btn_select"
@@ -112,11 +120,12 @@
                     android:layout_height="@dimen/_50sdp"
                     android:layout_weight="1"
                     android:background="@drawable/bck_remainder_select_btn"
-                    android:text="Select"
+                    android:text="@string/str_select"
                     android:textSize="@dimen/_13sdp"
                     android:textStyle="bold"
                     android:textColor="@color/white"
-                    android:textAllCaps="false"/>
+                    android:textAllCaps="false"
+                    tools:ignore="ButtonStyle" />
 
             </LinearLayout>
 
