--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -1,55 +1,157 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
+        <variable
+            name="vm"
+            type="com.android.mobile_project.ui.activity.main.fragment.setting.SettingViewModel" />
+
+        <variable
+            name="f"
+            type="com.android.mobile_project.ui.activity.main.fragment.setting.SettingFragment" />
+
     </data>
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:background="@color/bck_ground">
+        android:background="@color/bck_ground"
+        android:orientation="vertical">
 
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginStart="@dimen/_10sdp"
-            android:layout_marginEnd="@dimen/_10sdp"
             android:layout_marginTop="@dimen/_28sdp"
+            android:layout_marginEnd="@dimen/_10sdp"
+            android:background="@drawable/bck_habit"
             android:orientation="vertical"
-            android:background="@drawable/bck_habit">
+            android:paddingHorizontal="@dimen/_10sdp"
+            android:paddingTop="@dimen/_10sdp">
 
-            <ScrollView
+
+            <LinearLayout
+                android:id="@+id/btn_synchronize"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginBottom="@dimen/_10sdp"
-                android:scrollbars="none">
+                android:layout_height="@dimen/_70sdp"
+                android:background="@drawable/bck_item_after"
+                android:gravity="center_horizontal"
+                android:orientation="horizontal"
+                android:onClick="@{(v)->f.onClick(v)}">
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_marginStart="@dimen/_20sdp"
+                    android:layout_weight="1">
+
+                    <com.google.android.material.imageview.ShapeableImageView
+                        android:layout_width="@dimen/_30sdp"
+                        android:layout_height="@dimen/_30sdp"
+                        android:src="@drawable/ic_synchronize"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:shapeAppearanceOverlay="@style/corner" />
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginEnd="@dimen/_20sdp"
+                    android:layout_weight="4"
+                    android:gravity="center"
+                    android:text="@string/text_synchronize"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/_15ssp"
+                    android:textStyle="bold" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/btn_about_us"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_70sdp"
+                android:onClick="@{(v)-> f.onClick(v)}">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_gravity="center"
-                    android:orientation="vertical">
+                    android:background="@drawable/bck_habit_btn"
+                    android:gravity="center_horizontal"
+                    android:orientation="horizontal">
 
-                    <ImageView
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_marginStart="@dimen/_20sdp"
+                        android:layout_weight="1">
+
+                        <com.google.android.material.imageview.ShapeableImageView
+                            android:layout_width="@dimen/_30sdp"
+                            android:layout_height="@dimen/_30sdp"
+                            android:src="@drawable/ic_about_us"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:shapeAppearanceOverlay="@style/corner" />
+
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:layout_width="@dimen/_250sdp"
-                        android:layout_height="@dimen/_250sdp"
-                        android:src="@drawable/img_feedback"/>
+                        android:layout_marginEnd="@dimen/_20sdp"
+                        android:layout_weight="4"
+                        android:gravity="center"
+                        android:text="@string/text_about_us"
+                        android:textColor="#5A5858"
+                        android:textSize="@dimen/_15ssp"
+                        android:textStyle="bold" />
 
                 </LinearLayout>
+            </LinearLayout>
 
-            </ScrollView>
+            <LinearLayout
+                android:id="@+id/btn_login_logout"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_70sdp"
+                android:background="@drawable/bck_item_failed"
+                android:gravity="center"
+                android:orientation="horizontal"
+                android:onClick="@{(v) -> f.onClick(v)}">
 
+                <TextView
+                    android:id="@+id/tv_login_status"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="@string/text_logout"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/_15ssp"
+                    android:textStyle="bold" />
+
+            </LinearLayout>
 
         </LinearLayout>
 
+        <ImageView
+            android:layout_width="0dp"
+            android:layout_height="150dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:src="@drawable/ic_setting_bck_tree"
+            tools:ignore="ContentDescription" />
 
-
-
-
-    </LinearLayout>
+    </RelativeLayout>
 </layout>
