--- a/app/src/main/res/layout/layout_ver_calendar.xml
+++ b/app/src/main/res/layout/layout_ver_calendar.xml
@@ -126,7 +126,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/_25sdp"
-            android:layout_marginEnd="@dimen/_25sdp"/>
+            android:layout_marginEnd="@dimen/_25sdp"
+            android:layout_marginTop="@dimen/_10sdp"/>
 
     </LinearLayout>
 </LinearLayout>
