--- a/FE/app/src/main/res/layout/activity_create_habit.xml
+++ b/FE/app/src/main/res/layout/activity_create_habit.xml
@@ -87,6 +87,7 @@
                             android:layout_height="@dimen/_70sdp"
                             android:layout_marginTop="@dimen/_20sdp"
                             android:src="@drawable/icon_habit"
+                            app:strokeColor="@null"
                             app:shapeAppearanceOverlay="@style/corner"
                             android:visibility="gone"/>
 
