--- a/FE/app/src/main/res/layout/rcv_item_habit_done.xml
+++ b/FE/app/src/main/res/layout/rcv_item_habit_done.xml
@@ -30,6 +30,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
+                    app:strokeColor="@null"
                     android:src="@drawable/ic_item_habit_done"
                     app:shapeAppearanceOverlay="@style/corner" />
 
