--- a/FE/app/src/main/res/drawable/bck_splash.xml
+++ b/FE/app/src/main/res/drawable/bck_splash.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list android:opacity="opaque"
     xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@color/bck_ground" />
+    <item android:drawable="@color/white" />
     <item android:gravity="center"
-        android:drawable="@drawable/ic_launcher_foreground"/>
+        android:drawable="@drawable/ic_about_deciduous_tree"/>
     <!-- <bitmap android:gravity="center" android:src="@drawable/splash" />
  </item>-->
 </layer-list>
