--- a/FE/app/src/main/res/layout/activity_habit_setting.xml
+++ b/FE/app/src/main/res/layout/activity_habit_setting.xml
@@ -239,6 +239,7 @@
                             android:layout_marginTop="@dimen/_20sdp"
                             android:src="@drawable/ic_feedback"
                             android:visibility="gone"
+                            app:strokeColor="@null"
                             app:shapeAppearanceOverlay="@style/corner" />
 
                         <TextView
