--- a/FE/app/src/main/res/layout/rcv_item_habit.xml
+++ b/FE/app/src/main/res/layout/rcv_item_habit.xml
@@ -34,6 +34,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
+                    app:strokeColor="@null"
                     android:src="@drawable/icon_tracer"
                     app:shapeAppearanceOverlay="@style/corner" />
 
