--- a/FE/app/src/main/res/values/colors.xml
+++ b/FE/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="green">#3E721D</color>
 
     <color name="bck_ground">#E0E0E0</color>
 
