--- a/FE/app/src/main/res/layout/fragment_setting.xml
+++ b/FE/app/src/main/res/layout/fragment_setting.xml
@@ -37,7 +37,8 @@
             <LinearLayout
                 android:id="@+id/btn_synchronize"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/_70sdp"
+                android:layout_height="@dimen/_65sdp"
+                android:layout_marginHorizontal="@dimen/_10sdp"
                 android:background="@drawable/bck_item_after"
                 android:gravity="center_horizontal"
                 android:orientation="horizontal"
@@ -79,12 +80,13 @@
             <LinearLayout
                 android:id="@+id/btn_about_us"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/_70sdp"
+                android:layout_height="@dimen/_65sdp"
                 android:onClick="@{(v)-> f.onClick(v)}">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:layout_marginHorizontal="@dimen/_10sdp"
                     android:background="@drawable/bck_habit_btn"
                     android:gravity="center_horizontal"
                     android:orientation="horizontal">
@@ -126,7 +128,8 @@
             <LinearLayout
                 android:id="@+id/btn_login_logout"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/_70sdp"
+                android:layout_height="@dimen/_65sdp"
+                android:layout_marginHorizontal="@dimen/_10sdp"
                 android:background="@drawable/bck_item_failed"
                 android:gravity="center"
                 android:orientation="horizontal"
@@ -148,7 +151,8 @@
 
         <ImageView
             android:layout_width="0dp"
-            android:layout_height="150dp"
+            android:layout_height="@dimen/_80sdp"
+            android:layout_marginBottom="@dimen/_10sdp"
             android:layout_alignParentStart="true"
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
