--- a/FE/app/src/main/res/layout/fragment_setting.xml
+++ b/FE/app/src/main/res/layout/fragment_setting.xml
@@ -112,7 +112,7 @@
 
             <View
                 android:layout_width="3sp"
-                android:layout_height="@dimen/_80sdp"
+                android:layout_height="@dimen/_40sdp"
                 android:layout_marginVertical="@dimen/_15sdp"
                 android:layout_gravity="center"
                 android:background="@color/bck_ground" />
@@ -225,11 +225,18 @@
 
             </LinearLayout>
 
+            <View
+                android:layout_width="3sp"
+                android:layout_height="@dimen/_40sdp"
+                android:layout_marginVertical="@dimen/_15sdp"
+                android:layout_gravity="center"
+                android:background="@color/bck_ground" />
+
         </LinearLayout>
 
         <ImageView
             android:layout_width="0dp"
-            android:layout_height="@dimen/_80sdp"
+            android:layout_height="@dimen/_70sdp"
             android:layout_marginBottom="@dimen/_10sdp"
             android:layout_alignParentStart="true"
             android:layout_alignParentEnd="true"
