--- a/FE/app/src/main/res/values/colors.xml
+++ b/FE/app/src/main/res/values/colors.xml
@@ -11,7 +11,10 @@
 
     <color name="bck_ground">#E0E0E0</color>
 
+    <color name="title">#5A5858</color>
+
     <color name="last_date_month_1">#FA8181</color>
+
     <color name="last_date_month_2">#B43030</color>
 
     <color name="back_bottom_nav">#443B3B</color>
